vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = "${var.cidr_vpc}"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags {
    Environment = "${var.environment_tag}"
  }
}
